# flappybird

./: CMakeLists.txt  README.md
android/: build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/skymunge/flappybird/: DummyActivity.java
android/app/src/main/java/com/skymunge/hcg004/: DummyActivity.java
android/app/src/main/res/values/: strings.xml
assets/: atlases.json
assets/textures/: all_atlas.json
output/: index.data  index.js
src/: application.cpp  application.h  button.cpp  button.h  defines.h  flappy_button.cpp  flappy_button.h  flappy_label.cpp  flappy_label.h  flappy_pipe.cpp  flappy_pipe.h  label.cpp  label.h  main.cpp  pipe.cpp  pipe.h
